--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="utf-8">
-    <title>TRAVELER - Free Travel Website Template</title>
+    <title>Mantenimiento-port</title>
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
     <meta content="Free HTML Templates" name="keywords">
     <meta content="Free HTML Templates" name="description">
@@ -29,13 +29,13 @@
 
 <body>
 
-    <div id="preloader">
+<!--     <div id="preloader">
         <div class="loader">
           <div class="bar"></div>
         </div>
         <h2></h2>
       </div>
-
+ -->
 
     <!-- Topbar Start -->
     <div class="container-fluid bg-dark pt-3 d-none d-lg-block">
