--- a/index.html
+++ b/index.html
@@ -197,7 +197,7 @@
         <div class="container pt-5 pb-3">
             <div class="text-center mb-3 pb-3">
                 <h6 class="text-primary text-uppercase" style="letter-spacing: 5px;">Nuestros Servicios</h6>
-                <h1>¿A que nos dedicamos?</h1>
+                <h1 class="text-white">¿A que nos dedicamos?</h1>
             </div>
             <div class="accordion">
                 <div class="accordion-item">
