--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@
                             <i class="fa fa-2x fa-money-check-alt text-white"></i>
                         </div>
                         <div class="d-flex flex-column">
-                            <h5 class="">100% Transparencia</h5>
+                            <h5 class="text-white">100% Transparencia</h5>
                             <p class="m-0">Nos esforzamos por mantener tanto al vendedor como al cliente plenamente
                                 informados en todo momento</p>
                         </div>
@@ -168,7 +168,7 @@
                             <i class="fa fa-2x fa-award text-white"></i>
                         </div>
                         <div class="d-flex flex-column">
-                            <h5 class="">Mejores Servicios</h5>
+                            <h5 class="text-white">Mejores Servicios</h5>
                             <p class="m-0">Nos enorgullecemos de ofrecer los servicios más destacados y de calidad para
                                 satisfacer tus necesidades</p>
                         </div>
@@ -181,7 +181,7 @@
                             <i class="fa fa-2x fa-arrow-up text-white"></i>
                         </div>
                         <div class="d-flex flex-column">
-                            <h5 class="">Excelente Calidad Garantizada</h5>
+                            <h5 class="text-white">Excelente Calidad Garantizada</h5>
                             <p class="m-0">Nuestro compromiso es ofrecerte productos con la más alta calidad en el
                                 mercado.</p>
                         </div>
