--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 
 <body>
 
-<!--     <div id="preloader">
+    <!--     <div id="preloader">
         <div class="loader">
           <div class="bar"></div>
         </div>
@@ -205,7 +205,10 @@
                         Mantenimiento <span class="arrow"></span>
                     </button>
                     <div class="accordion-content">
-                        El mantenimiento informático se enfoca en la revisión, limpieza y optimización de los componentes internos de los equipos, así como en la actualización de software y la detección y solución de posibles problemas para asegurar un rendimiento óptimo y prolongar la vida útil de los dispositivos.
+                        El mantenimiento informático se enfoca en la revisión, limpieza y optimización de los
+                        componentes internos de los equipos, así como en la actualización de software y la detección y
+                        solución de posibles problemas para asegurar un rendimiento óptimo y prolongar la vida útil de
+                        los dispositivos.
                     </div>
                 </div>
                 <div class="accordion-item">
@@ -213,7 +216,10 @@
                         Reparacion <span class="arrow"></span>
                     </button>
                     <div class="accordion-content">
-                        Placeholder content for Accordion Item #2
+                        Nuestro servicio de reparación de notebooks ofrece soluciones rápidas y efectivas para resolver
+                        cualquier problema que pueda surgir en tu dispositivo. Confía en nuestro equipo de expertos para
+                        cuidar, optimizar y prolongar la vida útil de tu notebook. Brindamos un servicio de calidad,
+                        asesoramiento especializado y la garantía de que tu equipo estará en las mejores manos.
                     </div>
                 </div>
                 <div class="accordion-item">
@@ -221,7 +227,10 @@
                         Actualizaciones <span class="arrow"></span>
                     </button>
                     <div class="accordion-content">
-                        Placeholder content for Accordion Item #3
+                        Actualiza tu experiencia informática con nuestro servicio de actualización de componentes.
+                        Potencia el rendimiento de tu equipo con las últimas tecnologías, amplía la memoria y mejora la
+                        capacidad de almacenamiento. Confía en nosotros para llevar tu notebook al siguiente nivel y
+                        disfruta de un funcionamiento más eficiente y veloz.
                     </div>
                 </div>
             </div>
@@ -312,9 +321,8 @@
                 <a href="" class="navbar-brand">
                     <h1 class="text-primary"><span class="text-white">MANTENIMIENTO</span>-PORT</h1>
                 </a>
-                <p>Sed ipsum clita tempor ipsum ipsum amet sit ipsum lorem amet labore rebum lorem ipsum dolor. No sed
-                    vero lorem dolor dolor</p>
-                <h6 class="text-white text-uppercase mt-4 mb-3" style="letter-spacing: 5px;">Follow Us</h6>
+                <p>Eleginos como tu mejor opcion informatica</p>
+                <h6 class="text-white text-uppercase mt-4 mb-3" style="letter-spacing: 5px;">Seguinos</h6>
                 <div class="d-flex justify-content-start">
                     <a class="btn btn-outline-primary btn-square mr-2" href="#"><i class="fab fa-twitter"></i></a>
                     <a class="btn btn-outline-primary btn-square mr-2" href="#"><i class="fab fa-facebook-f"></i></a>
@@ -325,7 +333,7 @@
             <div class="col-lg-3 col-md-6 mb-5">
                 <h5 class="text-white text-uppercase mb-4" style="letter-spacing: 5px;">Our Services</h5>
                 <div class="d-flex flex-column justify-content-start">
-                    <a class="text-white-50 mb-2" href="#"><i class="fa fa-angle-right mr-2"></i>About</a>
+                    <a class="text-white-50 mb-2" href="#"><i class="fa fa-angle-right mr-2"></i>mas informacion</a>
                     <a class="text-white-50 mb-2" href="#"><i class="fa fa-angle-right mr-2"></i>Destination</a>
                     <a class="text-white-50 mb-2" href="#"><i class="fa fa-angle-right mr-2"></i>Services</a>
                     <a class="text-white-50 mb-2" href="#"><i class="fa fa-angle-right mr-2"></i>Packages</a>
