--- a/index.html
+++ b/index.html
@@ -95,14 +95,13 @@
     <!-- Carousel Start -->
 
     <div class="container-fluid p-0">
-        <div id="header-carousel" class="carousel slide" data-ride="carousel">
-            <div "></div>
+        <div id="header-carousel"  data-ride="carousel">
             <div class=" carousel-inner particles-js" id="particles-bg">
                 <div class="carousel-item active">
                     <div class="carousel-caption d-flex flex-column align-items-center justify-content-center">
                         <div class="p-3" style="max-width: 900px;">
                             <!-- <h4 class="text-white text-uppercase mb-md-3">Toledo Alan</h4> -->
-                            <h1 class="text-primary display-3 text-white mb-md-4"><span
+                            <h1 class="text-primary display-3 text-white    "><span
                                     class="text-white">MANTENIMIENTO</span>-PORT</h1>
                             <p>Solo necesitas este mantenimiento</p>
                         </div>
@@ -331,30 +330,29 @@
                 </div>
             </div>
             <div class="col-lg-3 col-md-6 mb-5">
-                <h5 class="text-white text-uppercase mb-4" style="letter-spacing: 5px;">Our Services</h5>
+                <h5 class="text-white text-uppercase mb-4" style="letter-spacing: 5px;">Más de Nosotros</h5>
                 <div class="d-flex flex-column justify-content-start">
-                    <a class="text-white-50 mb-2" href="#"><i class="fa fa-angle-right mr-2"></i>mas informacion</a>
-                    <a class="text-white-50 mb-2" href="#"><i class="fa fa-angle-right mr-2"></i>Destination</a>
-                    <a class="text-white-50 mb-2" href="#"><i class="fa fa-angle-right mr-2"></i>Services</a>
-                    <a class="text-white-50 mb-2" href="#"><i class="fa fa-angle-right mr-2"></i>Packages</a>
+                    <a class="text-white-50 mb-2" href="#"><i class="fa fa-angle-right mr-2"></i>Mas informacion</a>
+                    <a class="text-white-50 mb-2" href="#"><i class="fa fa-angle-right mr-2"></i>Preguntas Frecuentes</a>
+                    <a class="text-white-50 mb-2" href="#"><i class="fa fa-angle-right mr-2"></i>Algunos Ejemplos   </a>
+                    <!-- <a class="text-white-50 mb-2" href="#"><i class="fa fa-angle-right mr-2"></i>Packages</a>
                     <a class="text-white-50 mb-2" href="#"><i class="fa fa-angle-right mr-2"></i>Guides</a>
                     <a class="text-white-50 mb-2" href="#"><i class="fa fa-angle-right mr-2"></i>Testimonial</a>
-                    <a class="text-white-50" href="#"><i class="fa fa-angle-right mr-2"></i>Blog</a>
+                    <a class="text-white-50" href="#"><i class="fa fa-angle-right mr-2"></i>Blog</a> -->
                 </div>
             </div>
 
             <div class="col-lg-3 col-md-6 mb-5">
-                <h5 class="text-white text-uppercase mb-4" style="letter-spacing: 5px;">Contact Us</h5>
-                <p><i class="fa fa-map-marker-alt mr-2"></i>123 Street, New York, USA</p>
-                <p><i class="fa fa-phone-alt mr-2"></i>+012 345 67890</p>
-                <p><i class="fa fa-envelope mr-2"></i>info@example.com</p>
+                <h5 class="text-white text-uppercase mb-4" style="letter-spacing: 5px;">Contactanos</h5>
+                <p><i class="fa fa-phone-alt mr-2"></i>+3794 143938</p>
+                <p><i class="fa fa-envelope mr-2"></i>mantenimiento_port@gmail.com</p>
                 <h6 class="text-white text-uppercase mt-4 mb-3" style="letter-spacing: 5px;">Newsletter</h6>
                 <div class="w-100">
                     <div class="input-group">
                         <input type="text" class="form-control border-dark" style="padding: 25px;"
-                            placeholder="Your Email">
+                            placeholder="Tu Mensaje...">
                         <div class="input-group-append">
-                            <button class="btn btn-primary px-3">Sign Up</button>
+                            <button class="btn btn-primary px-3">Enviar</button>
                         </div>
                     </div>
                 </div>
