--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
     <!-- Libraries Stylesheet -->
     <link href="lib/owlcarousel/assets/owl.carousel.min.css" rel="stylesheet">
     <link href="lib/tempusdominus/css/tempusdominus-bootstrap-4.min.css" rel="stylesheet" />
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
 
     <!-- Customized Bootstrap Stylesheet -->
     <link href="css/style.css" rel="stylesheet">
@@ -36,37 +37,17 @@
         <h2></h2>
       </div>
  -->
-
-    <!-- Topbar Start -->
-    <div class="container-fluid bg-dark pt-3 d-none d-lg-block">
-        <div class="container">
-            <div class="row">
-                <div class="col-lg-6 text-center text-lg-left mb-2 mb-lg-0">
-                </div>
-                <div class="col-lg-6 text-center text-lg-right">
-                    <div class="d-inline-flex align-items-center">
-                        <a class="text-primary px-3" href="">
-                            <i class="fab fa-facebook-f"></i>
-                        </a>
-                        <a class="text-primary px-3" href="">
-                            <i class="fab fa-twitter"></i>
-                        </a>
-                        <a class="text-primary px-3" href="">
-                            <i class="fab fa-linkedin-in"></i>
-                        </a>
-                        <a class="text-primary px-3" href="">
-                            <i class="fab fa-instagram"></i>
-                        </a>
-                        <a class="text-primary pl-3" href="">
-                            <i class="fab fa-youtube"></i>
-                        </a>
-                    </div>
-                </div>
-            </div>
+        <!-- Botón de WhatsApp -->
+        <a href="#" class="whatsapp-btn" id="whatsapp-btn">
+            <i class="bi bi-telephone-outbound-fill"></i>
+        </a>
+    
+        <div class="whatsapp-form-container" id="whatsapp-form-container">
+            <form class="whatsapp-form">
+                <input type="text" class="whatsapp-input" id="whatsapp-input" placeholder="Escribe tu mensaje...">
+                <button type="submit" class="whatsapp-send-btn">Enviar</button>
+            </form>
         </div>
-    </div>
-    <!-- Topbar End -->
-
 
     <!-- Navbar Start -->
     <div class="container-fluid position-relative">
@@ -361,7 +342,6 @@
     </div>
     <!-- Footer End -->
 
-
     <!-- Back to Top -->
     <a href="#" class="btn btn-lg btn-primary btn-lg-square back-to-top"><i class="fa fa-angle-double-up"></i></a>
 
@@ -381,6 +361,7 @@
     <!-- Contact Javascript File -->
     <script src="mail/jqBootstrapValidation.min.js"></script>
     <script src="mail/contact.js"></script>
+    <script src="js/wpp.js"></script>
 
     <!-- Template Javascript -->
     <script src="js/main.js"></script>
