--- a/index.html
+++ b/index.html
@@ -5,8 +5,6 @@
     <meta charset="utf-8">
     <title>Mantenimiento-port</title>
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
-    <meta content="Free HTML Templates" name="keywords">
-    <meta content="Free HTML Templates" name="description">
 
     <!-- Favicon -->
     <link href="img/mi logo.png" rel="icon">
@@ -61,10 +59,10 @@
                 </button>
                 <div class="collapse navbar-collapse justify-content-between px-3" id="navbarCollapse">
                     <div class="navbar-nav ml-auto py-0">
-                        <a href="index.html" class="nav-item nav-link active">Home</a>
-                        <a href="#about" class="nav-item nav-link">About</a>
-                        <a href="#service" class="nav-item nav-link">Services</a>
-                        <a href="#localition" class="nav-item nav-link">Tour Packages</a>
+                        <a href="index.html" class="nav-item nav-link active">Inicio</a>
+                        <a href="#about" class="nav-item nav-link">Sobre Mi</a>
+                        <a href="#service" class="nav-item nav-link">Servicios</a>
+                        <a href="#localition" class="nav-item nav-link">Localizacion</a>
                     </div>
                 </div>
             </nav>
@@ -260,12 +258,12 @@
 
 
     <!-- Registration Start -->
-    <div class="container-fluid bg-registration py-5 particles-js" id="particles-bg localition" style="margin: 90px 0;">
-        <div class="container py-5">
+    <div class="container-fluid bg-registration py-5 particles-js" id="particles-bg" style="margin: 90px 0;">
+        <div class="container py-5" id="localition">
             <div class="row align-items-center">
                 <div class="col-lg-5 mb-5 mb-lg-0 ">
                     <div class="mb-4">
-                        <h6 class="text-primary text-uppercase" style="letter-spacing: 5px;">¿Donde nos encontramos?
+                        <h6 class="text-primary text-uppercase" style="letter-spacing: 5px";>¿Donde nos encontramos?
                         </h6>
                         <h1 class="text-white">Encontranos<span class="text-primary"> acá</span></h1>
                     </div>
