Update  index.html agregando servicios

--- a/index.html
+++ b/index.html
@@ -35,17 +35,17 @@
         <h2></h2>
       </div>
  -->
-        <!-- Botón de WhatsApp -->
-        <a href="#" class="whatsapp-btn" id="whatsapp-btn">
-            <i class="bi bi-telephone-outbound-fill"></i>
-        </a>
-    
-        <div class="whatsapp-form-container" id="whatsapp-form-container">
-            <form class="whatsapp-form">
-                <input type="text" class="whatsapp-input" id="whatsapp-input" placeholder="Escribe tu mensaje...">
-                <button type="submit" class="whatsapp-send-btn">Enviar</button>
-            </form>
-        </div>
+    <!-- Botón de WhatsApp -->
+    <a href="#" class="whatsapp-btn" id="whatsapp-btn">
+        <i class="bi bi-telephone-outbound-fill"></i>
+    </a>
+
+    <div class="whatsapp-form-container" id="whatsapp-form-container">
+        <form class="whatsapp-form">
+            <input type="text" class="whatsapp-input" id="whatsapp-input" placeholder="Escribe tu mensaje...">
+            <button type="submit" class="whatsapp-send-btn">Enviar</button>
+        </form>
+    </div>
 
     <!-- Navbar Start -->
     <div class="container-fluid position-relative">
@@ -74,7 +74,7 @@
     <!-- Carousel Start -->
 
     <div class="container-fluid p-0">
-        <div id="header-carousel"  data-ride="carousel">
+        <div id="header-carousel" data-ride="carousel">
             <div class=" carousel-inner particles-js" id="particles-bg">
                 <div class="carousel-item active">
                     <div class="carousel-caption d-flex flex-column align-items-center justify-content-center">
@@ -82,7 +82,7 @@
                             <!-- <h4 class="text-white text-uppercase mb-md-3">Toledo Alan</h4> -->
                             <h1 class="text-primary display-3 text-white    "><span
                                     class="text-white">MANTENIMIENTO</span>-PORT</h1>
-                            <p>Solo necesitas este mantenimiento</p>
+                            <p>¡Déjanos escuchar tus problemas tecnológicos y te proporcionaremos la mejor solucion!</p>
                         </div>
                     </div>
                 </div>
@@ -105,13 +105,14 @@
 
                 <div class="col-lg-6 pt-5 pb-lg-5">
                     <div class="about-text bg-dark p-4 p-lg-5 my-lg-5">
-                        <h6 class="text-primary text-uppercase" style="letter-spacing: 5px;">¿Quienes Somos?</h6>
-                        <h1 class="mb-3 text-white">Buscamos el mejor bienestar de tu equipo portatil</h1>
-                        <p class="text-white">Somos especialistas en el cuidado y revitalización de tus equipos
-                            portátiles. Nos dedicamos
-                            con pasión a mantener o devolver a la vida a tus dispositivos, asegurando su óptimo
+                        <h6 class="text-primary text-uppercase" style="letter-spacing: 5px;">¿Quiénes Somos?</h6>
+                        <h1 class="mb-3 text-white">Buscamos el mejor bienestar de tu sistema tecnológico </h1>
+                        <p class="text-white">Somos expertos en el cuidado y revitalización de tus dispositivos
+                            informáticos. Nos dedicamos
+                            con pasión a mantener o devolver a la vida a tus equipos, asegurando su óptimo
                             funcionamiento y rendimiento. Nos encargamos de mantenerlos en pleno funcionamiento para que
                             puedas seguir trabajando y disfrutando sin preocupaciones.</p>
+
 
 
                     </div>
@@ -201,7 +202,7 @@
                     </div>
                 </div>
                 <div class="accordion-item">
-                    <button class="accordion-button bg-dark " aria-expanded="false">
+                    <button class="accordion-button bg-dark" aria-expanded="false">
                         Actualizaciones <span class="arrow"></span>
                     </button>
                     <div class="accordion-content">
@@ -211,6 +212,45 @@
                         disfruta de un funcionamiento más eficiente y veloz.
                     </div>
                 </div>
+
+                <div class="accordion-item">
+                    <button class="accordion-button bg-dark" aria-expanded="false">
+                        Instalación de Sistema Operativo <span class="arrow"></span>
+                    </button>
+                    <div class="accordion-content">
+                        Instalamos el sistema operativo que mejor se adapte a tus necesidades. Ya sea Windows, macOS o
+                        Linux,
+                        nos aseguramos de que tu sistema esté correctamente instalado y configurado para un rendimiento
+                        óptimo.
+                    </div>
+                </div>
+
+                <div class="accordion-item">
+                    <button class="accordion-button bg-dark" aria-expanded="false">
+                        Copias de Seguridad <span class="arrow"></span>
+                    </button>
+                    <div class="accordion-content">
+                        Protege tus datos más importantes con nuestro servicio de copias de seguridad. Realizamos copias
+                        periódicas
+                        de tus archivos para garantizar su disponibilidad en caso de pérdida o daño, proporcionándote
+                        tranquilidad
+                        y seguridad.
+                    </div>
+                </div>
+
+                <div class="accordion-item">
+                    <button class="accordion-button bg-dark" aria-expanded="false">
+                        Eliminación de Virus <span class="arrow"></span>
+                    </button>
+                    <div class="accordion-content">
+                        Mantén tu equipo protegido contra amenazas informáticas con nuestro servicio de eliminación de
+                        virus.
+                        Detectamos y eliminamos software malicioso de tu dispositivo, asegurando un funcionamiento
+                        seguro y sin
+                        interrupciones.
+                    </div>
+                </div>
+
             </div>
 
 
@@ -263,7 +303,7 @@
             <div class="row align-items-center">
                 <div class="col-lg-5 mb-5 mb-lg-0 ">
                     <div class="mb-4">
-                        <h6 class="text-primary text-uppercase" style="letter-spacing: 5px";>¿Donde nos encontramos?
+                        <h6 class="text-primary text-uppercase" style="letter-spacing: 5px" ;>¿Donde nos encontramos?
                         </h6>
                         <h1 class="text-white">Encontranos<span class="text-primary"> acá</span></h1>
                     </div>
@@ -276,7 +316,7 @@
                         <div class="map_main">
                             <div class="map-responsive">
                                 <iframe
-                                    src="https://www.google.com/maps/embed?pb=!1m17!1m12!1m3!1d3539.6693718023707!2d-58.82393602504109!3d-27.47955081712516!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m2!1m1!2zMjfCsDI4JzQ2LjQiUyA1OMKwNDknMTYuOSJX!5e0!3m2!1ses-419!2sar!4v1689797271026!5m2!1ses-419!2sar"
+                                    src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3397.9856270859113!2d-60.67965022495853!3d-31.606853605483867!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95b5075564a5e955%3A0xfa2880902ba08bf5!2sAv.%20Gral.%20Paz%207041%2C%20S3004IKD%20Santa%20Fe%20de%20la%20Vera%20Cruz%2C%20Santa%20Fe!5e0!3m2!1ses!2sar!4v1707974362050!5m2!1ses!2sar"
                                     width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"
                                     referrerpolicy="no-referrer-when-downgrade"></iframe>
                             </div>
@@ -312,8 +352,9 @@
                 <h5 class="text-white text-uppercase mb-4" style="letter-spacing: 5px;">Más de Nosotros</h5>
                 <div class="d-flex flex-column justify-content-start">
                     <a class="text-white-50 mb-2" href="#"><i class="fa fa-angle-right mr-2"></i>Mas informacion</a>
-                    <a class="text-white-50 mb-2" href="#"><i class="fa fa-angle-right mr-2"></i>Preguntas Frecuentes</a>
-                    <a class="text-white-50 mb-2" href="#"><i class="fa fa-angle-right mr-2"></i>Algunos Ejemplos   </a>
+                    <a class="text-white-50 mb-2" href="#"><i class="fa fa-angle-right mr-2"></i>Preguntas
+                        Frecuentes</a>
+                    <a class="text-white-50 mb-2" href="#"><i class="fa fa-angle-right mr-2"></i>Algunos Ejemplos </a>
                     <!-- <a class="text-white-50 mb-2" href="#"><i class="fa fa-angle-right mr-2"></i>Packages</a>
                     <a class="text-white-50 mb-2" href="#"><i class="fa fa-angle-right mr-2"></i>Guides</a>
                     <a class="text-white-50 mb-2" href="#"><i class="fa fa-angle-right mr-2"></i>Testimonial</a>
